# cardboard

./: .codecov.yml  .env.docker  .env.test  .eslintrc.js  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  Pipfile  Procfile  README.md  app.json  dev-guide.md  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  manage.py  new-hunt-setup.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  user-guide.md  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
.circleci/: config.yml
.github/workflows/: pre-commit.yaml  pre-submit.yaml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_puzzler_last_accessed_hunt.py  0003_auto_20201217_0019.py  0004_alter_puzzler_id.py
answers/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
answers/migrations/: 0001_initial.py  0002_answer_response.py  0002_auto_20191125_0817.py  0003_auto_20191204_2308.py  0004_auto_20201227_0419.py  0005_answer_updated_on.py  0006_auto_20201229_1902.py  0007_alter_answer_response.py  0008_alter_answer_id.py  0009_puzzles_soft_delete.py
answers/templates/: queue.html
answers/templatetags/: answer_extras.py
api/: permissions.py  serializers.py  test_helpers.py  tests.py  urls.py  views.py
cardboard/: celery.py  context_processors.py  settings.py  tests.py  urls.py  views.py  wsgi.py
cardboard/static/: style.css
cardboard/templates/: base.html  home.html  instructions.html  privacy.html  reactbase.html  tools.html  troubleshooting.html
chat/: admin.py  fake_service.py  models.py  service.py  tasks.py  tests.py
chat/migrations/: 0001_initial.py  0002_auto_20201223_1717.py  0003_auto_20201223_1848.py  0004_auto_20201226_2214.py  0005_auto_20201230_1705.py  0006_auto_20210101_1710.py  0007_chatrole.py  0008_alter_chatroom_audio_channel_url_and_more.py  0009_alter_chatrole_id_alter_chatroom_id.py  0010_remove_chatroom_unique_room_name_per_service.py  (+1 more)
discord/: discord_client.py
discord_lib/: __init__.py  discord_chat_service.py  test.py
frontend/: package.json
google_api_lib/: __init__.py  google_api_client.py  sync_task.py  sync_tasks.py  task.py  tasks.py  tests.py  utils.py  whitelist.py
google_drive_lib/: google_drive_client.py
hunts/: __init__.py  admin.py  apps.py  chart_utils.py  forms.py  models.py  package.json  signals.py  slack_client.py  stats_utils.py  tests.py  urls.py  views.py  webpack.config.js
hunts/src/: App.js  (+84 more)
patches/: react-table+7.6.2.patch
puzzles/: __init__.py  admin.py  apps.py  forms.py  models.py  puzzle_tag.py  puzzle_tree.py  tag_utils.py  tests.py  urls.py  utils.py  views.py
scripts/: add_service_account_contacts.py  cleanup_service_account_contacts.py
slack_lib/: answer_bot.py  slack_client.py
smallboard/: asgi.py  celery.py  consumers.py  context_processors.py  routing.py  settings.py  tests.py  urls.py  views.py  wsgi.py
(+110 files in other folders)
