[tool.poetry]
name = "cardboard"
version = "0.1.0"
description = "A dashboard for managing puzzles and tracking status during a puzzle hunt."
authors = ["Cardinality Puzzlers <cardinalitypuzzles@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10" # keep .github/workflows/pre-submit.yaml synced
Django = "^4.2"
python-dotenv = "^0.19.2"
google-api-python-client = "^2.33.0"
social-auth-app-django = "^5.4.1"
django-taggit = "^2.0.0"
url-normalize = "^1.4.3"
gunicorn = "^22.0.0"
djangorestframework = "^3.15.2"
celery = "^5.2.3"
redis = "^4.1.0"
"discord.py" = "^1.7.3"
django-celery-beat = "^2.4.0"
python-dateutil = "^2.8.2"
django-cors-headers = "^4.3.1"
django-guardian = "^2.4.0"
django-soft-delete = "^1.0.16"
dj-database-url = "^2.3.0"
whitenoise = "^6.8.2"
psycopg2 = "^2.9.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
black = "^24.3.0"
coverage = "*"
django-silk = "^5.0.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
